Kubernetes/03-IngressConfigmap/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # Ingress object should be controlled by the ingress-nginx controller
    kubernetes.io/ingress.class: nginx
    # you want to rewrite the URL target in places. (used for redirection to prevent 404 errors)
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        # configuration regarding the individual path routings
        paths:
          # this is for frontend application's service, with path like "/", "/test1",...
        - pathType: Prefix
          path: "/?(.*)"
          backend:
            service:
              name: client-clusterip-service
              # target port inside the service
              port:
                number: 8080
          # this is for backend service, with path like "/api/", "/api/test1",...
        - pathType: Prefix
          path: "/api/?(.*)"
          backend:
            service:
              name: api-clusterip-service
              port: 
                number: 3000
